<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 首页 playlist_fragment.xml -->
    <string name="Blended_animation_houses">的动画屋</string>
    <string name="year_old">5岁</string>
    <string name="year_old_1">0-3岁</string>
    <string name="year_old_2">3-6岁</string>
    <string name="year_old_3">6-8岁</string>

    <!-- 返回  back_btn_register.xml -->
    <string name="navigation_back">返回</string>

    <!-- 宝宝信息  kidsinfo_fragment.xml -->
    <string name="age_text">年龄</string>
    <string name="app_name">童乐客厅幼教</string>
    <string name="sex_text">性别</string>

    <!-- 开通会员 open_members.xml -->
    <string name="open_members">开通会员</string>
    <string name="open_members_des">解除每天30分钟、英文语音、课程随选和回看限制</string>
    <string name="new_open">立即开通</string>

    <!-- 支付 pay.xml -->
    <string name="price_365">￥600元</string>
    <string name="price_year">365元/年</string>
    <string name="price_30">￥40元</string>
    <string name="price_month">30元/月</string>
    <string name="price_365_des">(365天无限制使用)</string>
    <string name="price_30_des">(30天无限制使用)</string>
    <string name="gift_des">现在订购年会员可免费领取超值大礼</string>
    <string name="ktm_text">开通码</string>
    <string name="ktm_des">（已购买乐学派或乐学包用户使用）</string>

    <!-- 支付方式 payment_method.xml -->
    <string name="parment_method">请选择支付方式</string>
    <string name="pay_money">共需支付：</string>
    <string name="yunpay_text">阿里TV支付</string>
    <string name="alipay_text">支付宝支付</string>
    <string name="mitvpay_text">米币支付</string>
    <string name="wechat_text">微信支付</string>
    <string name="alipay_qrcode_text">支付宝扫二维码支付</string>
    <string name="wechat_qrcode_text">微信扫二维码支付</string>
    <string name="alipay_text_des">请用支付宝扫描二维码</string>
    <string name="wechat_text_des">请用微信扫描二维码</string>
    <string name="not_install_wxapp">您尚未安装微信应用。</string>
    <string name="unsupported_pay_wxapp">您的微信应用版本太低, 未支持支付功能。</string>
    <string name="pay">支付</string>

    <!-- alipay -->
    <string name="alipay_time_hint">温馨提示：请在10分钟内支付</string>

    <!-- 续费 renewal_ktm.xml -->
    <string name="rdredge_id_text">请输入开通码</string>
    <string name="rdredge_id_is_null">开通码不能为空</string>
    <string name="dredge_btn_text">开通</string>
    <string name="dredge">续费</string>
    <string name="dredge_method1">方法一</string>
    <string name="dredge_method2">方法二</string>
    <string name="dredge_method1_info1">点击按钮到淘宝的</string>
    <string name="dredge_method1_info2">爱V猫官方旗舰店续费</string>
    <string name="dredge_method1_btn">立即前往</string>
    <string name="dredge_method2_info1">用手机淘宝扫描二维码</string>
    <string name="dredge_method2_info2">到爱V猫官方旗舰店续费</string>
    <string name="renewal_qrcode_des">*请牢记用户名或者手机号，一旦丢失将无法登录</string>
    <string name="skip">跳过</string>

    <!-- title_cloud.xml -->
    <string name="stub_string"></string>
    <string name="server_phone">客服电话：4009904909</string>
    <string name="server_qq_group">QQ群：195481932</string>

    <!-- babyInfor.xml 页面标题 -->
    <string name="baby_name">姓名</string>
    <string name="baby_name_is">晨晨宝宝</string>
    <string name="baby_birday">生日</string>
    <string name="male">男宝</string>
    <string name="female">女宝</string>
    <string name="save_alter">保存修改</string>
    <string name="baby_yearandmonth_is">2013/06/15</string>
    <string name="baby_sex">性别</string>
    <string name="baby_sex_is">男</string>
    <string name="baby_ability">七项能力学习主题推荐</string>
    <string name="agility">推理分析</string>
    <string name="bilingual_comm">肢体旋律</string>
    <string name="imag_creativity">想象创造</string>
    <string name="num_math">数字数学</string>
    <string name="own_perception">双语沟通</string>
    <string name="reasoning">自我认知</string>
    <string name="wildlife_nature">生物自然</string>
    <!-- 通用 -->
    <string name="check_connect">当前网络不可用，请检查网络！</string>
    <string name="is_last_page">已经刷新到最后一页啦！</string>
    <string name="prompt">提示</string>
    <string name="setting_network">设置网络</string>
    <string name="empress_retry">稍后重试</string>

    <!-- 关于我们 -->
    <string name="about_us">&#160;&#160;&#160;&#160;\"童乐客厅幼教\"是一款由深圳童心网络有限公司重磅打造，专为2-7岁孩子设计的免费儿童应用。寓教于乐的方式，让孩子开学的学习知识。操作简单，绝无广告和不良内容。\n&#160;&#160;&#160;&#160;深圳童心网络有限公司，致力于发行优质的幼教的儿童教学内容，设计最优的新媒介儿童教育方法和培养儿童发展的核心竞争力，于2014年底注册成立，注册资本1500万，正式员工50人。创业员工来自教育</string>
    <string name="version_number">版本号：</string>
    <string name="number">1.0</string>
    <string name="website">网址：</string>
    <string name="website_is">www.huhakids.com</string>
    <string name="official_weixin">官方微信号</string>

    <!-- buy_vip -->
    <string name="year_money">288元1年</string>
    <string name="day_3_money">3元1天</string>
    <string name="day_5_money">5元2天</string>
    <string name="month_money">30元1个月</string>
    <string name="day_6_money_money">6元3天</string>
    <string name="recommend">开通VIP服务后:\n1.你每天的观看时长将不受限制。\n2.你可以使用中英文切换功能，看原版动画，学地道英语。</string>

    <!-- doyoulike -->
    <string name="countdown">倒计时</string>
    <string name="c_number">5</string>

    <!-- 家长中心 -->
    <string name="parrents_center">家长中心</string>
    <string name="open_vip">开通VIP</string>
    <string name="baby_info">宝宝信息</string>
    <string name="record">播放记录</string>
    <string name="study_report">学习报告</string>
    <string name="response">我要吐槽</string>
    <string name="p_about_us">关于我们</string>
    <string name="login">登录</string>

    <!-- 我要吐槽 -->
    <string name="commit">提交</string>
    <string name="common_response">常用吐槽语</string>

    <!-- free_play -->
    <string name="recommend_context">推荐内容 </string>

    <!-- grid_top -->
    <string name="channel">客厅幼教频道</string>
    <string name="global_channel">Global童乐 </string>
    <string name="my_channel">我的频道 </string>

    <!-- 历史记录 -->
    <string name="play_time">播放时间:</string>

    <!-- 登陆 -->
    <string name="phone_number">手机号</string>
    <string name="password">密&#160;&#160;&#160;&#160;码</string>
    <string name="get_password">获取动态密码</string>
    <string name="l_login">登&#160;&#160;&#160;&#160;录</string>

    <!-- 家长回答问题 -->
    <string name="parrents_answer">请家长回答问题</string>
    <string name="mod">÷</string>
    <string name="equal">=&#160;&#160;&#160;&#160;?</string>

    <!-- 视频观后评价 -->
    <string name="will_play">即将播放</string>
    <string name="training_target">培养目标</string>

    <!-- time_dialog -->
    <string name="time_play">播放时间设置</string>

    <!-- pay_secceed -->
    <string name="thanks_open">感谢您的开通</string>
    <string name="you_have_pay">你已经购买了</string>
    <string name="menber_server">会员服务</string>
    <string name="menber_server_time">会员到期：</string>
    <string name="i_know">我知道了</string>

    <!-- bind_vip -->
    <string name="phone">手机号</string>
    <string name="thanks_join_vip">非常感谢您加入我们的VIP俱乐部</string>
    <string name="bind">为了您能更好的使用我们的服务，强烈建议您绑定一个常用的手机号</string>
    <string name="get_security_code">收验证码</string>
    <string name="security_code">验证码</string>
    <string name="function">您将可以在电视、电脑\n平板、手机同步您的观\n看信息（以图片的形式\n展示）</string>
    <string name="to_bind">绑定</string>

    <!-- 版本升级 -->
    <string name="login_find_out_new_verson">发现更新</string>
    <string name="login_find_out_new_verson_gift">更新就送</string>
    <string name="download_error">升级包下载失败，请稍后再试!</string>
    <string name="login_download_doing">开始升级&#8230;</string>
    <string name="login_downloaded">下载了</string>
    <string name="login_game_downloaded_1">游戏更新了</string>
    <string name="login_game_downloaded_2">请稍后&#8230;</string>
    <string name="login_game_begin_download">游戏更新了0%，请稍后&#8230;</string>
    <string name="download_title">正在下载更新包，请稍后 &#8230;</string>
    <string name="update_title">升级啦</string>
    <string name="update_Install">安装</string>
    <string name="update_close">关闭</string>
    <string name="update_Confir">马上升级</string>
    <string name="update_Cancel">残忍拒绝</string>
    <string name="version_title">检测到新版本 </string>
    <string name="file_size_title">文件大小：</string>
    <string name="no_wifi">您现在使用的是移动数据网络，升级将会消耗较多流量，您确定要更新吗？</string>
    <string name="download_success">新版本已经为您准备好了，咱们赶紧更新吧~</string>


    <!-- 家长中心 tab 页面标题 -->
    <string-array name="tab_parent">
        <item>开通VIP</item>
        <item>宝宝信息</item>
        <item>播放记录</item>
        <item>学习报告</item>
        <item>我要吐槽</item>
        <item>关于我们</item>
        <item>登&#160;&#160;&#160;&#160;录</item>
    </string-array>
    <string-array name="what_context">
        <item>播放太卡啦！</item>
        <item>动画内容太少啦！</item>
        <item>太复杂不会用！</item>
        <item>操作太多，用起来不方便</item>
        <item>每天可观看的时间太短了</item>
    </string-array>

</resources>