<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="@dimen/play_frame_width"
        android:layout_height="@dimen/play_frame_height"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_parent_frame"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thanks_open"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:textColor="@color/green" />

        </RelativeLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="35dp"
            android:layout_height="wrap_content">
        <com.kidsmind.cartoon.views.ApplidiumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_have_pay"
            android:textSize="25sp"
            android:textColor="@color/black" />
        <com.kidsmind.cartoon.views.ApplidiumTextView
            android:id="@+id/vip_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/orange_text" />
        <com.kidsmind.cartoon.views.ApplidiumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menber_server"
            android:textSize="25sp"
            android:textColor="@color/black" />
        </LinearLayout>
         <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="15dp">
        <com.kidsmind.cartoon.views.ApplidiumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menber_server_time"
            android:textSize="25sp"
            android:textColor="@color/black" />
        <com.kidsmind.cartoon.views.ApplidiumTextView
            android:id="@+id/vip_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/orange_text" />
        </LinearLayout>
        <com.kidsmind.cartoon.views.ApplidiumTextView
                android:id="@+id/iKonw"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/btn_green"
                android:focusable="true"
                android:gravity="center"
                android:layout_marginTop="35dp"
                android:text="@string/i_know"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                app:customFont="GothamRnd-Bold.otf" />
    </LinearLayout>

</RelativeLayout>