<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_vip_year"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1.2"
                android:background="@drawable/vip_butt_year_selector"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:nextFocusRight="@+id/tv_vip_one_day"
                android:text="@string/year_money"
                android:textColor="@android:color/white"
                android:textSize="24sp" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_vip_one_day"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:background="@drawable/day_vip_butt_experience_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/day_3_money"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_vip_two_day"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/vip_butt_experience_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/day_5_money"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_vip_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vip_butt_experience_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/month_money"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_vip_three_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vip_butt_experience_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                   android:text="@string/day_6_money_money"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommend"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>